--- a/src/assets/style/CreateUser.scss
+++ b/src/assets/style/CreateUser.scss
@@ -1,10 +1,12 @@
-.create-user-page {
-    main {
+@import './variables.scss';
+.create-user-page-main {
+   background-color: $color3;
       display: flex;
       justify-content: center;
       align-items: center;
+      justify-content: center;
       height: 100vh;
-    }
+    
   
     .create-user-form {
       background-color: #f8f9fa;
@@ -26,13 +28,14 @@
       form {
         display: flex;
         flex-direction: column;
+        width: 100%;
   
         label {
           margin-bottom: 10px;
         }
   
         input {
-          width: 100%;
+          width: 95%;
           padding: 10px;
           border: 1px solid #ced4da;
           border-radius: 5px;
