--- a/src/assets/style/CreateUser.scss
+++ b/src/assets/style/CreateUser.scss
@@ -1,62 +1,64 @@
 @import './variables.scss';
+
 .create-user-page-main {
-   background-color: $color3;
+  background-color: $color3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+
+
+  .create-user-form {
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 400px;
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #dc3545;
+      text-align: center;
+    }
+
+    form {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    
-  
-    .create-user-form {
-      background-color: #f8f9fa;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      width: 400px;
-  
-      h2 {
-        text-align: center;
-        margin-bottom: 20px;
+      flex-direction: column;
+      width: 100%;
+
+      label {
+        color: $color1;
+        margin-bottom: 10px;
       }
-  
-      p {
-        color: #dc3545;
-        text-align: center;
+
+      input {
+        width: 95%;
+        padding: 10px;
+        border: 1px solid $color1;
+        border-radius: 5px;
+        margin-top: 5px;
       }
-  
-      form {
-        display: flex;
-        flex-direction: column;
+
+      button {
         width: 100%;
-  
-        label {
-          margin-bottom: 10px;
-        }
-  
-        input {
-          width: 95%;
-          padding: 10px;
-          border: 1px solid #ced4da;
-          border-radius: 5px;
-          margin-top: 5px;
-        }
-  
-        button {
-          width: 100%;
-          padding: 10px;
-          border: none;
-          border-radius: 5px;
-          background-color: #007bff;
-          color: #fff;
-          font-size: 16px;
-          cursor: pointer;
-          margin-top: 10px;
-  
-          &:hover {
-            background-color: #0056b3;
-          }
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background-color: $color5;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+        margin-top: 10px;
+
+        &:hover {
+          background-color: $color1;
         }
       }
     }
   }
+}
