--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -13,9 +13,9 @@ $color6:#4B534E;
     
 }
 
-// body {
-//     font-family: 'Arial', sans-serif;
-//     background-color: $backgroundColor;
-//     margin: 0;
-//     padding: 0;
-//   }
+body {
+    font-family: 'Arial', sans-serif;
+    
+    margin: 0;
+    padding: 0;
+  }
