--- a/src/assets/style/ReviewPage.scss
+++ b/src/assets/style/ReviewPage.scss
@@ -1,12 +1,12 @@
 @import './variables.scss';
 
-main {
+#MainReviewPage{
+  background-color: aqua;
+  padding-top: 10%;
+  height: 100vh;
 
   #reviewArticle {
-    background-color: $color5;
-
-
-
+    
     padding: 15px;
 
 
