correction route & review Create

--- a/src/assets/style/HomePage.scss
+++ b/src/assets/style/HomePage.scss
@@ -3,12 +3,11 @@
 * {
   margin: 0;
   padding: 0;
-
 }
-
 
 .home-page-main {
   background-color: $color3;
+  text-align: center;
 
   #logo {
     height: 100vh;
@@ -27,26 +26,21 @@
       h1 {
         font-size: 110px;
         color: #ffffff;
-
         opacity: 0.5;
         position: absolute;
         font-family: 'Macondo', cursive;
         text-shadow: -1px 0 $color1, 0 1px $color1, 1px 0 $color1, 0 -1px $color1;
-        transition-property: text-shadow;
-        transition-duration: 200s;
-        transition-delay: 200s;
-      }
 
+      }
 
       img {
         width: 400px;
         transition: width 100ms linear, display;
-
       }
-
     }
 
-    .imgContainer:hover {
+    .hover-effect-on-scroll {
+
       h1 {
         opacity: 1;
         color: $color3;
@@ -58,137 +52,25 @@
         z-index: 2;
       }
     }
-
-  }
-
-
-
-  #Background {
-    height: 100vh;
-    background-color: $color3;
-
-
-    article {
-      height: 50vh;
-      color: $color1;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-
-      img {
-        margin-left: 6%;
-        width: 300px;
-      }
-
-      section {
-
-        h2 {
-
-          font-size: 40px;
-          text-align: center;
-          color: $color2;
-          margin-bottom: 30px;
-          margin-right: 80px;
-        }
-
-        p {
-          text-align: start;
-          color: $color2;
-          width: 600px;
-        }
-      }
-    }
-
-
-
-  }
-
-  #prestation {
-    margin: 5%;
-    background-color: $color5;
-    padding: 5%;
-
-    h2 {
-      font-size: 40px;
-      text-align: center;
-      color: $color2;
-    }
-
-    article {
-      color: $color1;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-
-      img {
-        width: 300px;
-      }
-
-    }
-
-    p {
-      text-align: start;
-      width: 500px;
-      color: $color2;
-    }
-
-  }
-
-  #sectionReviewMain {
-
-    padding-left: 10%;
-    width: 100%;
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 2px 2px;
-
-
-    #reviewMain {
-      width: 100%;
-      display: block;
-      margin-top: 25px;
-
-
-
-      p {
-        width: 100%;
-        color: $color2;
-
-
-        &:first-child {
-          font-size: 25px;
-          margin-bottom: 10px;
-          color: $color2;
-        }
-
-        &:last-child {
-          font-size: 22px;
-          color: #555;
-          font-weight: bolder;
-        }
-      }
-    }
   }
 
   #diaporama {
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
 
     #diaporamaContainer {
       position: relative;
-      width: 600px;
-      height: 600px;
-
+      width: 800px;
+      height: 800px;
 
       button {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         color: white;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: $color1;
         border: none;
         padding: 10px 20px;
         cursor: pointer;
@@ -208,16 +90,51 @@
       }
 
       #diaporamaImage {
-        width: 600px;
-        height: 600px;
+
+        height: 100%;
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-
       }
     }
   }
 
+  #sectionReviews {
+    height: auto;
+    width: 100%;
+    display: grid;
+    
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 4px;
+    grid-row-gap: 4px;
+    text-align: center;
+  
+    
 
+    #circle {
+      background-color: aqua;
+      height: 50px;
+      width: 50px;
+      border-radius: 30px;
+    }
 
+    section {
+      border: 1px $color1 solid;
+      background: rgba($color1, .1);
+      
+      height: 100px;
+      p {
+        color: $color2;
+
+      }
+    }
+    button{
+      background-color: red;
+      width: 200px;
+     
+
+    }
+
+  }
 }
