--- a/src/assets/style/GaleriePage.scss
+++ b/src/assets/style/GaleriePage.scss
@@ -11,31 +11,46 @@
     justify-content: center;
     color: $color4;
 
-    h1 {
-        margin-bottom: 20px;
-    }
+    #container-gallery {
+    
+        h1 {
+            margin-bottom: 20px;
+        }
 
-  
-
-    .images-container {
-        max-width: 1200px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 300px;
-        gap: 20px;
-        margin-bottom: 100px;
-    }
-
-    .images-container img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: transform 0.6s ease-in-out;
         
+
+        div {
+            text-align: center;
+            
+            h4{
+             margin-top: 20px;
+                grid-area: 1 / 2 / 2 / 3; 
+             
+            }
+            .images-container {
+                max-width: 1200px;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-auto-rows: 300px;
+                gap: 20px;
+                margin-bottom: 100px;
+                text-align: center;
+            }
+
+            .images-container img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: transform 0.6s ease-in-out;
+
+            }
+
+            .images-container img:hover {
+                transform: scale(1.2);
+
+            }
+        }
     }
 
-    .images-container img:hover {
-        transform: scale(1.2);
 
-    }
 }
