--- a/src/assets/style/HomePage.scss
+++ b/src/assets/style/HomePage.scss
@@ -12,7 +12,7 @@
   h2 {
     font-size: 30px;
     text-decoration: underline;
-    color: $color1;
+    color: $color2;
   }
 
   #logo {
@@ -23,11 +23,242 @@
     justify-content: center;
     background-color: $color4;
 
+    @keyframes move {
+      100% {
+          transform: translate3d(0, 0, 1px) rotate(360deg);
+      }
+  }
+  
+  .background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 3;
+      overflow: hidden;
+  }
+  
+  .background span {
+      z-index: -1;
+      width: 20vmin;
+      height: 20vmin;
+      border-radius: 20vmin;
+      backface-visibility: hidden;
+      position: absolute;
+      animation: move;
+      animation-duration: 28s;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+  }
+  
+  .background span:nth-child(1) {
+      color: $color3;
+      top: 73%;
+      left: 37%;
+      animation-duration: 9s;
+      animation-delay: -48s;
+      transform-origin: 1vw -19vh;
+      box-shadow: -40vmin 0 5.538803824156347vmin currentColor;
+  }
+  
+  .background span:nth-child(2) {
+      color: $color4;
+      top: 96%;
+      left: 44%;
+      animation-duration: 13s;
+      animation-delay: -3s;
+      transform-origin: 14vw -15vh;
+      box-shadow: -40vmin 0 5.091113327847769vmin currentColor;
+  }
+  
+  .background span:nth-child(3) {
+      color: $color2;
+      top: 54%;
+      left: 25%;
+      animation-duration: 9s;
+      animation-delay: -8s;
+      transform-origin: 3vw 13vh;
+      box-shadow: -40vmin 0 5.608611204103166vmin currentColor;
+  }
+  
+  .background span:nth-child(4) {
+      color: $color3;
+      top: 17%;
+      left: 32%;
+      animation-duration: 19s;
+      animation-delay: -41s;
+      transform-origin: -17vw -6vh;
+      box-shadow: -40vmin 0 5.298761512333877vmin currentColor;
+  }
+  
+  .background span:nth-child(5) {
+      color: $color4;
+      top: 41%;
+      left: 25%;
+      animation-duration: 6s;
+      animation-delay: -13s;
+      transform-origin: 19vw 10vh;
+      box-shadow: -40vmin 0 5.70937441069756vmin currentColor;
+  }
+  
+  .background span:nth-child(6) {
+      color: $color2;
+      top: 71%;
+      left: 85%;
+      animation-duration: 19s;
+      animation-delay: -47s;
+      transform-origin: 11vw 24vh;
+      box-shadow: 40vmin 0 5.932255939508974vmin currentColor;
+  }
+  
+  .background span:nth-child(7) {
+      color: $color3;
+      top: 35%;
+      left: 33%;
+      animation-duration: 13s;
+      animation-delay: -16s;
+      transform-origin: -7vw 9vh;
+      box-shadow: -40vmin 0 5.3050785942076395vmin currentColor;
+  }
+  
+  .background span:nth-child(8) {
+      color: $color4;
+      top: 94%;
+      left: 48%;
+      animation-duration: 44s;
+      animation-delay: -45s;
+      transform-origin: 2vw 18vh;
+      box-shadow: -40vmin 0 5.102632200009182vmin currentColor;
+  }
+  
+  .background span:nth-child(9) {
+      color: $color2;
+      top: 28%;
+      left: 97%;
+      animation-duration: 22s;
+      animation-delay: -6s;
+      transform-origin: -23vw -11vh;
+      box-shadow: 40vmin 0 5.095896048741611vmin currentColor;
+  }
+  
+  .background span:nth-child(10) {
+      color: $color3;
+      top: 31%;
+      left: 43%;
+      animation-duration: 51s;
+      animation-delay: -26s;
+      transform-origin: 17vw 16vh;
+      box-shadow: 40vmin 0 5.786795476456273vmin currentColor;
+  }
+  
+  .background span:nth-child(11) {
+      color: $color4;
+      top: 95%;
+      left: 2%;
+      animation-duration: 17s;
+      animation-delay: -13s;
+      transform-origin: 6vw -5vh;
+      box-shadow: 40vmin 0 5.267508237928913vmin currentColor;
+  }
+  
+  .background span:nth-child(12) {
+      color: $color2;
+      top: 5%;
+      left: 9%;
+      animation-duration: 25s;
+      animation-delay: -15s;
+      transform-origin: 5vw 15vh;
+      box-shadow: -40vmin 0 5.345938327850945vmin currentColor;
+  }
+  
+  .background span:nth-child(13) {
+      color: $color3;
+      top: 40%;
+      left: 17%;
+      animation-duration: 31s;
+      animation-delay: -14s;
+      transform-origin: -12vw -10vh;
+      box-shadow: -40vmin 0 5.199768934375181vmin currentColor;
+  }
+  
+  .background span:nth-child(14) {
+      color: $color4;
+      top: 42%;
+      left: 36%;
+      animation-duration: 8s;
+      animation-delay: -11s;
+      transform-origin: -1vw 9vh;
+      box-shadow: 40vmin 0 5.958626289986047vmin currentColor;
+  }
+  
+  .background span:nth-child(15) {
+      color: $color2;
+      top: 34%;
+      left: 60%;
+      animation-duration: 36s;
+      animation-delay: -5s;
+      transform-origin: -7vw 13vh;
+      box-shadow: 40vmin 0 5.4010602838366175vmin currentColor;
+  }
+  
+  .background span:nth-child(16) {
+      color: $color3;
+      top: 94%;
+      left: 16%;
+      animation-duration: 30s;
+      animation-delay: -40s;
+      transform-origin: -9vw 25vh;
+      box-shadow: -40vmin 0 5.092687923192798vmin currentColor;
+  }
+  
+  .background span:nth-child(17) {
+      color: $color4;
+      top: 81%;
+      left: 68%;
+      animation-duration: 33s;
+      animation-delay: -20s;
+      transform-origin: 0vw 10vh;
+      box-shadow: 40vmin 0 5.3781336156695065vmin currentColor;
+  }
+  
+  .background span:nth-child(18) {
+      color: $color2;
+      top: 92%;
+      left: 85%;
+      animation-duration: 31s;
+      animation-delay: -35s;
+      transform-origin: 6vw -17vh;
+      box-shadow: -40vmin 0 5.990089214654931vmin currentColor;
+  }
+  
+  .background span:nth-child(19) {
+      color: $color3;
+      top: 80%;
+      left: 81%;
+      animation-duration: 25s;
+      animation-delay: -5s;
+      transform-origin: 0vw 4vh;
+      box-shadow: 40vmin 0 5.246021725664003vmin currentColor;
+  }
+  
+  .background span:nth-child(20) {
+      color: $color4;
+      top: 78%;
+      left: 69%;
+      animation-duration: 6s;
+      animation-delay: -2s;
+      transform-origin: -4vw 18vh;
+      box-shadow: 40vmin 0 5.7901729918380465vmin currentColor;
+  }
+  
+
     .imgContainer {
       width: 900px;
       display: flex;
       align-items: center;
       justify-content: center;
+      z-index: 10;
 
       h1 {
         font-size: 110px;
@@ -36,12 +267,14 @@
         position: absolute;
         font-family: 'Macondo', cursive;
         text-shadow: -1px 0 $color1, 0 1px $color1, 1px 0 $color1, 0 -1px $color1;
+        z-index: 2;
 
       }
 
       img {
         width: 400px;
         transition: width 100ms linear, display;
+        z-index: 1;
       }
     }
 
@@ -61,29 +294,34 @@
   }
 
   #diaporama {
-    height: auto;
+    height: 60vh;
+
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+
+    h2 {
+      color: $color2;
+      text-decoration: none;
+    }
 
     #diaporamaContainer {
       position: relative;
-      width: 800px;
-      height: 800px;
+      width: 600px;
+      height: 400px;
+      overflow: hidden;
 
       button {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        color: white;
-        background-color: $color1;
-        border: none;
-        padding: 10px 20px;
-        cursor: pointer;
+        @extend .bouton;
         transition: background-color 0.3s ease;
 
         &:hover {
-          background-color: rgba(0, 0, 0, 0.7);
+          background-color: $color5;
+          color: $color2;
         }
       }
 
@@ -98,116 +336,171 @@
       #diaporamaImage {
 
         height: 100%;
-        background-size: contain;
+
+        background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
       }
     }
   }
 
-  #sectionReviews {
-    height: auto;
-    width: 100%;
-    display: grid;
 
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    
+  #container-review {
+    // background-color: $color5;
+    margin-top: 100px;
+    margin-bottom: 100px;
 
-    grid-row-gap: 4px;
-    text-align: center;
-
-   
-    .reviewArticle {
-
-      height: 100px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    #sectionReviews {
+      height: auto;
+      width: 100%;
+      display: grid;
+      font-size: 18px;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
 
 
-      section {
-        min-width: 500px;
-        max-width: 700px;
-        h4{
-          color: $color1;
-          text-decoration: underline;
+      grid-row-gap: 4px;
+      text-align: center;
+
+
+
+      .reviewArticle {
+
+        height: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+        section {
+          min-width: 500px;
+          max-width: 700px;
+
+          h4 {
+            color: $color1;
+            text-decoration: underline;
+          }
+
+          text-align: start;
+
+          p {
+            color: $color2;
+
+          }
+
+
         }
-        text-align: start;
-
-        p{
-          color: $color2;
-        
-        }
-        
-
       }
+    }
+
+    #title-review {
+      margin: 50px;
+    }
+
+    #button-review {
+      @extend .bouton;
+      margin: 50px;
+      transition: scale 0.6s;
+    }
+
+    #button-review:hover {
+      background-color: $color1;
+      
+      scale: 1.2;
+      color: $color2;
     }
   }
 
-  #title-review {
-    margin: 50px;
-  }
+  #contact-container {
 
-  #button-review {
-    background-color: $color4;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 200px;
-    color: $color1;
-    margin: 50px;
-  }
+    height: 60vh;
 
-  #button-review:hover {
-    background-color: unset;
-    border: solid $color4 1px;
-    color: $color4;
-  }
+    h2 {
+      margin-bottom: 50px;
+    }
 
-  .contact-page {
-    height: 30vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    .contact-page {
 
-    .contact-details {
       display: flex;
-      align-items: center;
-      justify-content: space-around;
+      flex-direction: column;
+      justify-content: center;
 
-      .contact-item {
+
+      .contact-details {
         display: flex;
-        flex-direction: column;
-        height: 200px;
-        width: 300px;
-        font-size: 18px;
-        color: $color2;
 
-        h4 {
-          padding-bottom: 25px;
-          color: $color1;
+        justify-content: space-around;
+
+        height: 300px;
+
+        .contact-item {
+          margin-top: 50px;
+
+          display: flex;
+          flex-direction: column;
+
+          width: 300px;
+
+          font-size: 18px;
+          color: $color2;
+         
+          h4 {
+            padding-bottom: 25px;
+            color: $color1;
+          }
+
+          h4,
+          p{
+            transition: scale 0.8s;
+          }
+
+          h4:hover,
+          p:hover {
+             scale: 1.2;
+          }
+
+          div {
+            margin-top: 50px;
+          }
+
+          svg {
+
+            font-size: 50px;
+            color: $color2;
+            padding-bottom: 20px;
+            transition: scale 0.8s;
+          }
+          svg:hover{
+            scale: 1.5;
+          }
+
         }
+
+        .contact-item:nth-of-type(2) {
+          padding-left: 100px;
+          padding-right: 100px;
+          border-left: solid 1px $color2;
+          border-right: solid 1px $color2;
+          margin-bottom: 50px;
+        }
+      }
+
+      .social-links {
+        margin-top: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         svg {
-
-          font-size: 35px;
+          font-size: 50px;
+          padding-left: 50px;
+          padding-right: 50px;
           color: $color2;
-          padding-bottom: 20px;
+          transition: scale 0.8s;
         }
-
-      }
-    }
-
-    .social-links {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      svg {
-        font-size: 35px;
-        padding-left: 50px;
-        padding-right: 50px;
-        color: $color2;
+        svg:hover{
+          scale: 1.5;
+        }
       }
     }
   }
