--- a/src/assets/style/PrestationPage.scss
+++ b/src/assets/style/PrestationPage.scss
@@ -15,15 +15,17 @@
   background-color: $color3;
 
   .article {
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
     padding: 20px;
-    border: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    height: 100%;
     width: 95%;
     min-height: 50vh;
-    border-radius: 5px;
+
     background-color: $color5;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 
     h2 {
       margin: 50px;
@@ -31,16 +33,20 @@
     }
 
     .imageContainer {
-      display: flex;
-      align-items: center;
-    
+      max-width: 600px;
+
+      img {
+        width: 100%;
+      }
     }
 
 
     section {
       display: flex;
       flex-direction: column;
-      width: 60%;
+      text-align: center;
+      width: 50%;
+      min-height: 600px;
 
     }
 
@@ -58,48 +64,48 @@
 
   .containerReview {
     text-align: center;
-  
+
     h1 {
       font-size: 24px;
       margin-bottom: 20px;
     }
-  
+
     form {
       display: flex;
       flex-direction: column;
       align-items: center;
-  
+
       label {
         font-weight: bold;
         margin-bottom: 10px;
       }
-  
+
       textarea {
         width: 100%;
         max-width: 400px;
         height: 100px;
         padding: 10px;
-       
+
         border: 1px solid #ccc;
         border-radius: 5px;
         resize: vertical; // Permet à l'utilisateur de redimensionner la zone de texte verticalement
       }
-  
+
       button {
         @extend .bouton;
         margin-bottom: 50px;
-  
+
         &:hover {
           color: $color4;
           background-color: $color1;
         }
       }
     }
-  
+
     p {
       margin-top: 20px;
       color: green;
     }
   }
-  
+
 }
