--- a/src/assets/style/UserPage.scss
+++ b/src/assets/style/UserPage.scss
@@ -1,43 +1,57 @@
+@import './variables.scss';
+
 #UserPageMain {
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-padding-top: 200px;
+  padding-top: 200px;
+  background-color: $color4;
 
   .user-profile {
     margin-bottom: 20px;
+
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    width: 60%;
 
     h2 {
       margin-bottom: 10px;
     }
 
-    .user-profile-form {
+    div {
+      height: 20vh;
       display: flex;
-      flex-direction: column;
+      align-items: center;
+      
+      .user-profile-form {
+        margin-top: 50px;
+       display: flex;
+       align-items: center;
 
-      label {
-        margin-bottom: 10px;
+        label {
+          margin-bottom: 10px;
 
-        input {
-          margin-top: 5px;
-          padding: 5px;
-          border: 1px solid #ccc;
-          border-radius: 5px;
+          input {
+            margin-top: 5px;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+          }
         }
-      }
 
-      .btn-update-profile {
-        margin-top: 10px;
-        padding: 5px 10px;
-        border: none;
-        background-color: #007bff;
-        color: #fff;
-        border-radius: 5px;
-        cursor: pointer;
-
-        &:hover {
-          background-color: #0056b3;
+        .btn-profile {
+         background-color: $color1;
+         color: $color2;
+         margin: 10px;
+        
+          @extend .bouton;
+          padding: 5px 10px;
+          
+          &:hover {
+            background-color: $color5;
+          }
         }
       }
     }
